--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,6 @@
     "python.formatting.provider": "yapf",
     "python.linting.flake8Args": ["--max-line-length=248"],
     "python.linting.pylintEnabled": false,
-    "python.pythonPath": "D:\\Users\\lynn\\AppData\\Local\\Continuum\\anaconda3\\envs\\test\\python.exe",
+    "python.pythonPath": "D:\\Users\\lynn\\AppData\\Local\\Continuum\\anaconda3\\python.exe",
     "code-runner.runInTerminal": true
 }
